src/engine/partitioner/snapshots/monodex__engine__partitioner__tests__rollup_summary.snap
---
source: src/engine/partitioner/tests.rs
expression: summary
---
=== QUALITY SCORE ===
Score: 100.0%
Total chunks: 1
Small chunks (<500 chars): 1
Chars: 243-243 (mean 243)

=== CHUNK 1 ===
Breadcrumb: api-extractor-scenarios:rollup.d.ts
Type: code
Kind: content
Symbol: None
Lines: 1-12
Size: 278 chars
Text preview (5 lines):
import { Lib1Class } from 'api-extractor-lib1-test';
import { Lib2Interface as RenamedLib2Interface } from 'api-extractor-lib2-test';

/** @public */
export declare class A {
