src/engine/partitioner/snapshots/monodex__engine__partitioner__tests__rollup_visualization.snap
---
source: src/engine/partitioner/tests.rs
expression: visualization
---
-- [CHUNK 1] [12 lines] [243 chars] --
import { Lib1Class } from 'api-extractor-lib1-test';
import { Lib2Interface as RenamedLib2Interface } from 'api-extractor-lib2-test';

/** @public */
export declare class A {
}

export { Lib1Class }

export { RenamedLib2Interface }

export { }
