src/engine/partitioner/snapshots/monodex__engine__partitioner__tests__tunneled_summary.snap
---
source: src/engine/partitioner/tests.rs
expression: summary
---
=== QUALITY SCORE ===
Score: 83.2%
Total chunks: 3
Small chunks (<500 chars): 0
Chars: 1920-3959 (mean 3043)

=== CHUNK 1 ===
Breadcrumb: %40rushstack/playwright-browser-tunnel:TunneledBrowserConnection.ts
Type: code
Kind: content
Symbol: None
Lines: 1-49
Size: 1987 chars
Text preview (5 lines):
// Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license.
// See LICENSE in the project root for license information.

import type { LaunchOptions } from 'playwright-core';
import playwrightPackageJson from 'playwright-core/package.json';

=== CHUNK 2 ===
Breadcrumb: %40rushstack/playwright-browser-tunnel:TunneledBrowserConnection.ts:tunneledBrowserConnection
Type: function
Kind: content
Symbol: Some("tunneledBrowserConnection")
Lines: 50-147
Size: 4052 chars
Text preview (5 lines):

  function maybeSendHandshake(): void {
    if (!handshakeSent && remoteSocket && browserName && launchOptions) {
      const handshake: IHandshake = {
        action: 'handshake',

=== CHUNK 3 ===
Breadcrumb: %40rushstack/playwright-browser-tunnel:TunneledBrowserConnection.ts:tunneledBrowserConnection
Type: function
Kind: content
Symbol: Some("tunneledBrowserConnection")
Lines: 148-231
Size: 3342 chars
Text preview (5 lines):

    localProxyWs.on('connection', (localWs, request) => {
      try {
        const urlString: string | undefined = request?.url;
        if (urlString) {
